# gu_toolkit

./: .gitignore  Agents.md  Figure.py  FigureSnapshot.py  GettingStarted-1.ipynb  InputConvert.py  NamedFunction-guide-1.ipynb  NamedFunction.py  NumericExpression.py  PLAN.md  ParamEvent.py  ParamRef.py  ParameterSnapshot.py  ParseLaTeX.py  PlotSnapshot.py  PlotlyPane.py  Slider.py  SmartFigure-1.ipynb  SmartFigure.py  SmartFigure_parameter_tests.ipynb  SmartParameters-1.ipynb  SmartParseLaTeX.py  SmartSlider.py  TestNotebook_SmartFigureViewportSync.ipynb  Untitled.ipynb  UserGuide-NamedFunction-1.ipynb  UserGuide-SmartException-1.ipynb  UserGuide-SmartFigure-2.ipynb  UserGuide_gu_SmartFigure.ipynb  __init__.py  codegen.py  debouncing.py  figure_api.py  figure_context.py  figure_info.py  figure_layout.py  figure_legend.py  figure_parameters.py  figure_plot.py  figure_plot_style.py  (+22 more)
.environment/: README.md  install_test_tools.py  maintainance.cmd  maintainance.sh  setup.cmd  setup.sh
.environment/pytest_cov_shim/: pyproject.toml
.environment/pytest_cov_shim/src/pytest_cov_shim/: __init__.py  plugin.py
.github/workflows/: tests.yml
docs/: Agents.md  README.md
docs/Bugs/: issue-020-slider-syncing-guard-stuck.md  issue-021-agents-md-documentation-discipline.md  issue-022-responsive-plotly-side-pane.md  issue-023-notebook-callable-plot-missing-x-context.md  issue-024-notebook-plot-style-aliases-alpha-width.md  issue-025-notebook-codegen-api-contract-mismatch.md  issue-026-notebook-params-snapshot-string-key-access.md  issue-027-notebook-plot-cached-samples-introspection.md  issue-028-example-notebook-has-placeholder-bug-markers-instead-of-user-guidance.md  issue-029-toolkit-notebook-tests-uses-undefined-show-helper.md  issue-030-codegen-export-does-not-preserve-authoring-intent.md  issue-031-callable-plot-vars-mapping-is-too-limited-for-notebook-examples.md  issue-032-toolkit-overview-compendium-section-lacks-usable-api-guide.md  issue-033-top-level-plot-shadowed-by-sympy-import-in-__init__.md  issue-034-notebook-figure-display-lifecycle-contract-is-ambiguous.md
docs/Discussions/: code-review-strengths-weaknesses.md  numerical_helper_review.md
docs/develop_guide/: develop_guide.md  layout_details_CSS_JS.md  smartfigure_developer_guide.md
docs/discussions/: gu_toolkit_deep_analysis_report.md
docs/guides/: api-discovery.md  develop_guide.md  figure-shell-phase1-architecture.md  layout_details_CSS_JS.md  legend-plot-editor.md  math-input.md  parameter-animation.md  parameter-key-semantics.md  parametric-plotting.md  public-api-documentation-structure.md  render-batching-and-snapshots.md  scalar-field-styling.md  semantic-math-refactoring-philosophy.md  ui-layout-system.md
docs/issues/: README.md  bug-020-slider-syncing-guard-stuck.md  bug-022-responsive-plotly-side-pane.md  bug-032-toolkit-overview-compendium-section-lacks-usable-api-guide.md  bug-033-top-level-plot-shadowed-by-sympy-import-in-__init__.md  gu_toolkit_jlab_sound_replacement_blueprint.md  issue-020-responsive-plotly-side-pane.md  issue-035-semantic-math-docstrings-are-placeholder-heavy.md  issue-036-docstring-quality-tests-do-not-cover-identifiers-or-mathlive-subpackages.md  issue-037-mathlive-showcase-is-not-markdown-first-and-still-contains-author-only-bug-cells.md  issue-038-the-notebook-introduces-the-low-level-transport-manifest-too-early-and-without-a-schema.md  issue-039-function-registration-contract-is-underexplained-in-the-showcase.md  issue-040-identifierinput-demo-conflates-interactive-teaching-with-regression-assertions.md  issue-041-semantic-math-cross-references-point-to-generic-or-missing-navigation-targets.md  issue-042-the-toolkit-symbol-helper-is-underdocumented-relative-to-sympy.md  issue-43-notebook-review-content-regression.md  (+16 more)
documentation/: Agents.md  README.md  SmartFigure_weak_points_handoff.md  Toolkit_notebook_tests.ipynb  Toolkit_overview.ipynb  design_refactor_parameter_management.md  global-plot-with-smartfigure-plan.md  phase1_parameter_refactor_design.md  plot_context_demo.ipynb  plotting_toolkit_overview.ipynb  slider_widget_redesign.md  smartfigure_plotlypane_refactor_plan.md
examples/: Animation_performance_debug.ipynb  Fourier-Sounds-filled.ipynb  Fourier-Sounds.ipynb  MathLive_identifier_system_showcase-2.ipynb  MathLive_identifier_system_showcase.ipynb  Robust_identifier_system_showcase.ipynb  Toolkit_advanced.ipynb  Toolkit_animation.ipynb  Toolkit_notebook_tests.ipynb  Toolkit_overview.ipynb  Toolkit_shell_overview.ipynb  layout_debug.ipynb
figure/: __init__.py  compat.py  context.py  core.py  layout.py  parameters.py  plots.py
gu_toolkit/: NamedFunction.py  __init__.py  autoload.py  numpify.py  prelude.py  setup.py
tests/: conftest.py  test-responsive_plotly.ipynb  test_Figure-param_change_hooks.ipynb  test_Figure_context_params_demo.ipynb  test_Figure_module_params.py  test_NamedFunction.py  test_SmartFigure-param_change_hooks.ipynb  test_SmartFigure_context_params_demo.ipynb  test_SmartFigure_module_params.py  test_SmartFigure_param_change_hooks.ipynb  test_and_demo-ParamRef_ref_first_system.ipynb  test_animation_clock_runtime.py  test_debouncing_error_handling.py  test_expression_context.py  test_figure_alias_api.py  test_figure_context_thread_safety.py  test_figure_display_contract.py  test_figure_render_pipeline.py  test_figure_render_scheduler.py  test_figure_snapshot_codegen.py  test_figure_sound.py  test_identifier_input_import_regression.py  test_identifier_input_widget.py  test_identifier_policy.py  test_info_cards.py  test_layout_debug_notebook_regressions.py  test_layout_logging.py  test_layout_logging_debouncer.py  test_layout_logging_figure.py  test_legend_context_menu.py  test_math_input_widget.py  test_math_inputs_transport.py  test_notebook_documentation_quality.py  test_numeric_callable_api.py  test_numpify_cache_behavior.py  test_numpify_refactor.py  test_param_change_hook_api.py  test_param_hook_context_binding.py  test_parameter_animation.py  test_parameter_definition_atomicity.py  (+34 more)
tools/: check_widget_layout.py
(+293 files in other folders)
